notification bug fixed and bottom nav bar bug fix and small fixes

--- a/Dare4CharFrontend/src/app/app.component.css
+++ b/Dare4CharFrontend/src/app/app.component.css
@@ -24,6 +24,10 @@
     left: 0;
     height: 50px;
 }
+.large{
+    color: black;
+    font-size: 30px;
+}
 .navbar .mat-toolbar-row {
     display: flex;
     flex-direction: row;
