--- a/Dare4CharFrontend/src/app/notification-list/notification-list.component.html
+++ b/Dare4CharFrontend/src/app/notification-list/notification-list.component.html
@@ -1,8 +1,11 @@
-<mat-card *ngFor="let notification of notifications;index as i" class="status">
-    <div mat-card-avatar 
-        [ngStyle]="{'background': '#000 url(' + getProfile(i) + ') no-repeat','background-size': 'cover'}"></div>
-    <div>
-        <mat-card-title>{{ users[notification.userid].username }} <mat-icon *ngIf="users[notification.userid].isPro">verified</mat-icon></mat-card-title>
-        <mat-card-subtitle *ngIf="notification.message" style="margin-left: 10px;" >{{ notification.message }}</mat-card-subtitle>
-    </div>
-</mat-card>
+<div class="content">
+    <mat-card *ngFor="let notification of notifications.reverse();index as i" class="status">
+        <mat-card-header *ngIf="users[notification.userid]">
+            <img mat-card-avatar src="{{ getProfile(i) }}"/>
+            <mat-card-title>{{ users[notification.userid].username }} <mat-icon *ngIf="users[notification.userid].isPro">verified</mat-icon></mat-card-title>
+            <mat-card-subtitle *ngIf="notification.message" style="margin-left: 10px;" >{{ notification.message }}</mat-card-subtitle>
+        </mat-card-header>
+        <p class="date" style="font-size: 12px;">{{ getDate(notification.date) }}</p>
+    </mat-card>
+    
+</div>
