--- a/Dare4CharFrontend/src/app/pro-list/pro-list.component.html
+++ b/Dare4CharFrontend/src/app/pro-list/pro-list.component.html
@@ -1,15 +1,18 @@
-<mat-card *ngFor="let userPro of pro_users ;index as i">
-<!-- (click)="onClickUser(userPro.user)"> -->
-    <mat-card-header>
-        <img mat-card-avatar src="{{ getProfile(userPro) }}">
-        <div *ngIf="userPro.user">
-            <mat-card-title>{{ userPro.user.username }} <mat-icon *ngIf="userPro.user.isPro">verified</mat-icon></mat-card-title>
-            <mat-card-subtitle  style="font-size: 20px;font-weight: 800;" ><strong>{{ userPro.category }}</strong><br>{{ userPro.description }}</mat-card-subtitle>
-        </div>
-    </mat-card-header>
-    <div class="center">
-        <button color="primary" mat-raised-button (click)="onAccept(userPro)">Accept</button>
-        <button color="primary" mat-raised-button (click)="onReject(userPro)">Reject</button>
-    </div>
-    
-</mat-card>
+<div class="content">
+    <mat-card *ngFor="let userPro of pro_users ;index as i">
+        <!-- (click)="onClickUser(userPro.user)"> -->
+            <mat-card-header class="status">
+                <img mat-card-avatar src="{{ getProfile(userPro) }}">
+                <div *ngIf="userPro.user">
+                    <mat-card-title>{{ userPro.user.username }} <mat-icon *ngIf="userPro.user.isPro">verified</mat-icon></mat-card-title>
+                    <mat-card-subtitle  style="font-size: 20px;font-weight: 800;" ><strong>{{ userPro.category }}</strong><br>{{ userPro.description }}</mat-card-subtitle>
+                </div>
+            </mat-card-header>
+            <div class="center">
+                <button color="primary" mat-raised-button (click)="onAccept(userPro)">Accept</button>
+                <button color="primary" mat-raised-button (click)="onReject(userPro)">Reject</button>
+            </div>
+            
+        </mat-card>
+        
+</div>
