--- a/Dare4CharFrontend/src/app/shared/user-list/user-list.component.html
+++ b/Dare4CharFrontend/src/app/shared/user-list/user-list.component.html
@@ -6,5 +6,5 @@
         <mat-card-title>{{ user.username }} <mat-icon *ngIf="user.isPro">verified</mat-icon></mat-card-title>
         <!-- <mat-card-subtitle *ngIf="user.message" style="margin-left: 10px;" >{{ user.message }}</mat-card-subtitle> -->
     </div>
-    <p style="position: absolute;right: 5px;">20</p>
+    <!-- <p style="position: absolute;right: 5px;">20</p> -->
 </mat-card>
