--- a/Dare4CharFrontend/src/app/friend-request/friend-request.component.html
+++ b/Dare4CharFrontend/src/app/friend-request/friend-request.component.html
@@ -1,4 +1,5 @@
 <div class="content">
+    <p *ngIf="userReqList.length==0" class="dummy">No Request Found</p>
     <mat-card *ngFor="let user of userReqList ;index as i">
         <!-- (click)="onClickUser(userPro.user)"> -->
             <mat-card-header class="status">
