--- a/Dare4CharFrontend/src/app/shared/post-model/post-model.component.html
+++ b/Dare4CharFrontend/src/app/shared/post-model/post-model.component.html
@@ -1,4 +1,4 @@
-<mat-card *ngIf="maxIndex" class="child">
+<mat-card *ngIf="maxIndex" class="child" [ngClass]="{'content': isSeperatePage}">
     
     <mat-card-header>
         <div *ngIf="postOwner" mat-card-avatar [ngStyle]="{'background': '#fff url(' + getProfileUrl() + ') no-repeat','background-size': 'cover'}"></div>
