--- a/Dare4CharFrontend/src/app/home/message-model/message-model.component.css
+++ b/Dare4CharFrontend/src/app/home/message-model/message-model.component.css
@@ -5,6 +5,10 @@ p{
     margin: 0;
     font-size: 19px;
 }
+.new{
+    background: lightskyblue;
+}
+
 .messageend{
     display: flex;
     align-items: center;
