--- a/Dare4CharFrontend/src/app/home/date-chat-model/date-chat-model.component.css
+++ b/Dare4CharFrontend/src/app/home/date-chat-model/date-chat-model.component.css
@@ -10,11 +10,10 @@
     margin: 0 0 0 auto;
 }
 
-.new{
-    background: red;
-}
 
 .center{
     text-align: center;
     margin: 0;
+    padding: 5px;
+    color: blue;
 }
