--- a/Dare4CharFrontend/src/app/home/date-chat-model/date-chat-model.component.html
+++ b/Dare4CharFrontend/src/app/home/date-chat-model/date-chat-model.component.html
@@ -5,5 +5,6 @@
     [message]="message"
     [curr_userid]="curr_userid"
     class="chat-model"
-    [ngClass]="{'right' : message.from==curr_userid,'new':isnew}"
+    [isNew]="isnew"
+    [ngClass]="{'right' : message.from==curr_userid}"
     ></app-message-model>
