--- a/Dare4CharFrontend/src/app/shared/user-list/user-list.component.html
+++ b/Dare4CharFrontend/src/app/shared/user-list/user-list.component.html
@@ -1,10 +1,13 @@
 <input type="text" style="width: 100%;padding: 10px;" placeholder="Search" [(ngModel)]="query">
-<mat-card *ngFor="let user of users | searchFilter : query;index as i" class="status" (click)="onClickUser(user)">
-    <div mat-card-avatar 
+<mat-card *ngFor="let user of users | searchFilter : query;index as i" class="status" (click)="onClickUser(user)" [ngClass]="{'new': isNewMessage(user)}">
+    <mat-card-header>
+        <div mat-card-avatar 
         [ngStyle]="{'background': '#000 url(' + getProfile(i) + ') no-repeat','background-size': 'cover'}"></div>
-    <div>
         <mat-card-title>{{ user.username }} <mat-icon *ngIf="user.isPro">verified</mat-icon></mat-card-title>
-        <!-- <mat-card-subtitle *ngIf="user.message" style="margin-left: 10px;" >{{ user.message }}</mat-card-subtitle> -->
+        <mat-icon *ngIf="isNewMessage(user)" style="position: absolute;right: 5px;">fiber_new</mat-icon>
+    </mat-card-header>
+   
+    <div>
+        <!-- <mat-card-subtitle *ngIf="isChat && user.lastMessage" style="margin-left: 10px;" >{{ user.lastMessage }}</mat-card-subtitle> -->
     </div>
-    <!-- <p style="position: absolute;right: 5px;">20</p> -->
 </mat-card>
