--- a/Dare4CharFrontend/src/app/home/message-page/message-page.component.html
+++ b/Dare4CharFrontend/src/app/home/message-page/message-page.component.html
@@ -20,6 +20,7 @@
 
 </div>
 <div class="messagebox">
-    <textarea placeholder="message" [(ngModel)]="curr_message"></textarea>
+    <textarea placeholder="message" id="msgbox" [(ngModel)]="curr_message"></textarea>
+    <mat-icon class="attach"> attach_file</mat-icon>
     <mat-icon *ngIf="curr_message.length>0" (click)="onMessageSend()">send</mat-icon>
 </div>
