--- a/Dare4CharFrontend/src/app/login-logout/login-logout.component.css
+++ b/Dare4CharFrontend/src/app/login-logout/login-logout.component.css
@@ -1,12 +1,12 @@
 :host{
     display: block;
+    padding-top: 20vh;
     width: 100%;
     height: 100vh;
-}
+    overflow: hidden;
+    background: url('https://images.unsplash.com/photo-1531386450450-969f935bd522?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fG5hdHVyZXxlbnwwfDF8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60');
+    background-size: cover;
 
-.custom-tabs.mat-tab-body-wrapper{
-    display: block;
-    margin: 50px auto;
 }
 
 
@@ -16,6 +16,7 @@ p{
 }
 .error{
     color: red;
+    text-align: center;
 }
 .password{
     position: relative;
@@ -31,19 +32,23 @@ p{
 }
 
 .mat-card{
-    width: 400px;
+    width: 380px;
     margin: auto;
-    height: 400px;
-    margin-top: 100px;
-    background-color: rgb(202, 201, 201);
+    min-height: 300px;
+    height: auto;
+    overflow: hidden;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    background-color: rgba(255, 255, 255, 0.3);
 }
 input{
     padding: 5px;
-    margin: 5px;
+    margin: 5px 10px 5px 5px;
 }
 .mat-card-actions{
     display: flex;
     justify-content: center;
+    overflow: visible;
 }
 
 
