--- a/Dare4CharFrontend/src/app/shared/user-list/user-list.component.html
+++ b/Dare4CharFrontend/src/app/shared/user-list/user-list.component.html
@@ -1,4 +1,4 @@
-<input type="text" style="width: 100%;padding: 10px;" placeholder="Search" [(ngModel)]="query">
+<input type="text" id="box" style="width: 100%;padding: 10px;" placeholder="Search" [(ngModel)]="query">
 <mat-card *ngFor="let user of users | searchFilter : query;index as i" class="status" (click)="onClickUser(user)" [ngClass]="{'new': isNewMessage(user)}">
     <mat-card-header>
         <div mat-card-avatar 
