--- a/Dare4CharFrontend/src/styles.css
+++ b/Dare4CharFrontend/src/styles.css
@@ -26,11 +26,20 @@ textarea {
 }
 input,.full-width{
     width: 100%;
+    border-style: groove;
 }
 
 p{
     font-size: 20px;
 }
+
+.custom-tabs .mat-tab-body-content{
+    display: block;
+    height: 100%;
+    height: fit-content;
+    overflow: visible;
+}
+
 
 .mat-tab-body-wrapper{
     width: 100%;
@@ -40,7 +49,9 @@ p{
 }
 .custom-tabs .mat-tab-body-wrapper {
     display: block;
-    margin: 50px auto;
+    margin: 20px auto;
+    height: auto;
+    width: 100%;
     overflow: hidden;
 }
 
