--- a/Dare4CharFrontend/src/app/home/message-page/message-page.component.html
+++ b/Dare4CharFrontend/src/app/home/message-page/message-page.component.html
@@ -18,8 +18,8 @@
         [isnew]="true"
         [user]="user"
         [curr_userid]="curr_userid"></app-date-chat-model>
-
 </div>
+<!-- Message box -->
 <div class="messagebox">
     <textarea placeholder="message" id="msgbox" [(ngModel)]="curr_message"></textarea>
     <mat-icon class="attach"                
