--- a/Dare4CharFrontend/src/app/shared/post-model/post-model.component.html
+++ b/Dare4CharFrontend/src/app/shared/post-model/post-model.component.html
@@ -37,7 +37,7 @@
                 ></span>
             </div>
             <div>
-                <mat-icon>report</mat-icon>
+                <mat-icon (click)="onReportPost()">report</mat-icon>
                 <mat-icon (click)="openDialog()">share</mat-icon>
             </div>
         </div>
