--- a/Dare4CharFrontend/src/app/shared/post-model/post-model.component.css
+++ b/Dare4CharFrontend/src/app/shared/post-model/post-model.component.css
@@ -23,6 +23,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    flex-shrink: 100;
     justify-content: space-evenly;
 }
 
